--- a/client/index.html
+++ b/client/index.html
@@ -206,6 +206,12 @@
                             </svg>
                             <span class="text-gray-300">Enhanced with supervised fine-tuning and DPO</span>
                         </li>
+                        <li class="flex items-start gap-3">
+                            <svg class="w-6 h-6 text-osrs-gold flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span class="text-gray-300">Customizable training pipeline for more context</span>
+                        </li>
                     </ul>
                 </div>
                 <div class="bg-gradient-to-br from-osrs-accent/20 to-purple-500/20 rounded-2xl p-8 border border-white/10">
@@ -249,6 +255,8 @@
             <h2 class="text-4xl font-bold mb-6">Ready to Chat with OSRS AI?</h2>
             <p class="text-gray-400 text-lg mb-8">
                 Get the model from GitHub and start running your own OSRS expert locally. Perfect for answering questions about quests, items, skills, and everything Gielinor.
+                <br><br>
+                Additionally, reference the training pipeline to add any additional context or inference desired to train your local version of the model. Runs with full privacy on your own hardware.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="https://github.com/kineticquant/osrs-llm" target="_blank" rel="noopener noreferrer"
