--- a/client/index.html
+++ b/client/index.html
@@ -88,7 +88,7 @@
     <section id="features" class="py-20 px-4 sm:px-6 lg:px-8 bg-osrs-dark/50">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold mb-4">About OSRS LLM?</h2>
+                <h2 class="text-4xl font-bold mb-4">About OSRS LLM</h2>
                 <p class="text-gray-400 text-lg max-w-2xl mx-auto">Built specifically for the OSRS community with comprehensive game knowledge from various sources. 
                 <br><br>
                 Designed to run on basic consumer hardware including lower VRAM GPU's, OSRS LLM delivers expert answers about quests, items, skills, and game mechanics without relying on cloud services. </p>
